syntax = "proto3";

package pbuff;

import "google/protobuf/wrappers.proto";

option go_package = "microservice-order/pkg/pbuff";


message OrderDto {
    string id = 1;
    string user_id = 2;
    string no_inv = 3;
    bool status = 4;
    repeated OrderDetailDto orderDetail = 5;
}

message OrderDetailDto {
    string product_id = 1;
    int64 qty = 2;
}

message OrderDtoList {
    repeated OrderDto list = 1;
}

message OrderReqDto {
    repeated OrderDetailDto order = 1;
}


service OrderApi {
    rpc Create(OrderReqDto) returns (OrderDto) {}
    rpc GetOrderByID(google.protobuf.StringValue) returns (OrderDto) {}
    rpc ListOrderByUserID(google.protobuf.StringValue) returns (OrderDtoList) {}
}